# cj24

./: CMakeLists.txt  LICENSE  sources.cmake
cmake-lib/: android.cmake  emscripten.cmake  portable-install.cmake  unixen.cmake  windows.cmake
run/: run-linux64.sh.in
src/logic/: main.cpp  state.cpp  state.hpp
